# ai_worker-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  setup.py  tracks.yaml
debian/: rules  (+4 more)
ffw_description/: CHANGELOG.rst  package.xml
ffw_description/gazebo/: ffw_follower.gazebo.xacro  ffw_right.gazebo.xacro
ffw_description/gazebo/ffw_sg2_rev1_follower/: ffw_sg2_follower.gazebo.xacro
ffw_description/launch/: model_view.launch.py
ffw_description/ros2_control/: ffw_follower_system_dummy.ros2_control.xacro  ffw_follower_with_rh_system.ros2_control.xacro  ffw_follower_with_rh_system_fast.ros2_control.xacro  ffw_leader_left_with_rh_system.ros2_control.xacro  ffw_leader_right_with_rh_system.ros2_control.xacro
ffw_description/ros2_control/ffw_bg2_rev2_follower/: ffw_bg2_follower.ros2_control.xacro
ffw_description/ros2_control/ffw_bg2_rev3_follower/: ffw_bg2_follower.ros2_control.xacro
ffw_description/ros2_control/ffw_bg2_rev4_follower/: ffw_bg2_follower.ros2_control.xacro
ffw_description/ros2_control/ffw_lg2_leader/: ffw_lg2_leader_left.ros2_control.xacro  ffw_lg2_leader_right.ros2_control.xacro
ffw_description/ros2_control/ffw_sg2_rev1_follower/: ffw_sg2_base.ros2_control.xacro  ffw_sg2_follower.ros2_control.xacro
ffw_description/rviz/: ffw.rviz  ffw_hand.rviz
ffw_description/urdf/: left_rh_p12_rn_a.urdf.xacro
ffw_description/urdf/ffw_bg2_rev2_follower/: ffw_bg2_follower.urdf.xacro
ffw_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
ffw_navigation/config/: navigation.yaml
(+169 files in other folders)
