<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ffw_description</name>
  <version>1.0.5</version>
  <description>
    3D models of the FFW for simulation and visualization
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <author email="wwj@robotis.com">Woojin Wie</author>
  <author email="wsh@robotis.com">Sungho Woo</author>
  <author email="pyo@robotis.com">Pyo</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <depend>realsense2_description</depend>
  <exec_depend>xacro</exec_depend>
  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
